# CrySPR

./: LICENSE  README.md  pyproject.toml  requirements.txt
cryspr/: __init__.py  wyckoffgene.py
cryspr/calculators/: __init__.py
cryspr/optimization/: __init__.py  global.py  local.py
cryspr/utils/: analysis.py  log.py  predict.py  struct.py
cryspr/wycryst/: __init__.py  model.py
examples/: cryspr_random_predict_CaTiO3.ipynb
tests/: test_utils.ipynb
